...
        KContextMenuArea(
            actions = {
                listOf(
                    KMenuActionItem("Copy", { last = "Copy" }),
                    KMenuActionItem("Rename", { last = "Rename" }, supportingText = "F2"),
                    KMenuActionItem("Pinned", { pinned = !pinned; last = "Pinned: $pinned" }, selected = pinned, closeOnClick = false),
                    if (group) KMenuActionGroup("Move to", listOf(KMenuActionItem("Archive", { last = "Archive" }), KMenuActionItem("Trash", { last = "Trash" }))) else null,
                    KMenuActionDivider,
                    KMenuActionItem("Delete", { last = "Delete" }),
                )
            },
            enabled = enabled,
        ) {
...
